# Boop

./: .gitmodules  CMakeLists.txt  README.md
boop/: CMakeLists.txt  boop.cpp  boop.h
boop/common/: asset.cpp  asset.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp  texture.h
boop/impl/: assimpImpl.cpp  assimpImpl.h  tinyObjImpl.cpp  tinyObjImpl.h
converter/: CMakeLists.txt  converter.cpp
tests/: CMakeLists.txt  convertTests.cpp  importTests.cpp
tests/TestAssets/PreConverted/: container_metadat_json.txt
tests/TestAssets/Soldier/: AnimatedKnight.bp
